<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".CatalogActivity">

    <item
        android:id="@+id/action_visit_restaurants_list"
        android:title="@string/category_restaurants"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_visit_hiking_list"
        android:title="@string/category_hiking"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_visit_drinks_list"
        android:title="@string/category_drinks"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_visit_main_page"
        android:title="@string/main_page"
        app:showAsAction="never"/>

</menu>